// Copyright 2023 Buf Technologies, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package tests.example.v1;

import "buf/validate/validate.proto";
import "google/protobuf/any.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "validate/validate.proto";

message LegacyNone {
  oneof o {
    int32 x = 1;
  }
}

message LegacyDisabled {
  option (validate.disabled) = true;
  int32 x = 1 [(validate.rules).int32.gt = 0];
}

message LegacyIgnored {
  option (validate.ignored) = true;
  int32 x = 1 [(validate.rules).int32.gt = 0];
}

message LegacyOneofRequired {
  oneof o {
    option (validate.required) = true;
    int32 x = 1;
  }
}

message LegacySimple {
  int32 x = 1 [(validate.rules).int32.gt = 0];
}

message LegacySkipped {
  LegacySimple x = 1 [(validate.rules).message.skip = true];
}

message LegacyMessageRequired {
  LegacySimple x = 1 [(validate.rules).message.required = true];
}

message LegacyIn {
  int32 x = 1 [(validate.rules).int32 = {
    in: [
      1,
      2,
      3
    ]
  }];
}

message LegacyRepeated {
  repeated int32 x = 1 [(validate.rules).repeated.items.int32.gt = 0];
}

message LegacyMap {
  map<string, int32> x = 1 [
    (validate.rules).map.keys.string.min_len = 3,
    (validate.rules).map.values.int32.gt = 0
  ];
}

message LegacyEnum {
  string x = 1 [(validate.rules).string.well_known_regex = HTTP_HEADER_NAME];
}

message LegacyWKTRequired {
  google.protobuf.Any any = 1 [(validate.rules).any.required = true];
  google.protobuf.Timestamp ts = 2 [(validate.rules).timestamp.required = true];
  google.protobuf.Duration dur = 3 [(validate.rules).duration.required = true];
}

message LegacyMixedMessage {
  option (validate.ignored) = true;
  option (buf.validate.message).disabled = false;

  int32 x = 1 [(buf.validate.field).int32.gt = 0];
}

message LegacyMixedOneof {
  oneof o {
    option (validate.required) = true;
    option (buf.validate.oneof).required = false;

    int32 x = 1 [(buf.validate.field).int32.gt = 0];
  }
}

message LegacyMixedFields {
  int32 x = 1 [
    (validate.rules).int32.gt = 0,
    (buf.validate.field).int32.lt = 100
  ];
}

message LegacyIgnoreEmpty {
  int32 x = 1 [(validate.rules).int32 = {
    gt: 123,
    ignore_empty: true
  }];
}
